Fix link output styling, reduce css spacing, other
Fixed the styling of the output when a link is created.

Added new full screen loading overlay with new text.

Reduced the spacing between sections on desktop screen sizes.

Updated version number.

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -20,7 +20,7 @@
 .form {
   max-width: 750px;
   padding: 1em;
-  margin: 2em auto;
+  margin: 1em auto;
   background-color: white;
   border-radius: var(--border-radius);
 }
@@ -53,6 +53,16 @@
   color: var(--primary-color);
 }
 
+.linkDetails {
+  color: var(--secondary-background-color);
+  background-color: var(--primary-color);
+  border-radius: var(--border-radius);
+  padding: 1em;
+}
+.linkDetails p {
+  margin: 0.5em 0;
+}
+
 /* Shortcuts section */
 .shortcuts {
   padding: 1em;
@@ -68,18 +78,34 @@
   margin: 0 1em;
 }
 
+.loading {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  background-color: rgba(211, 211, 211, 0.9);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (min-width: 750px) {
   .landing {
-    padding: 5em 0;
+    padding: 3em 0;
   }
   .bigText {
     font-size: 2rem;
     margin: 0.6em 0;
   }
   .form {
-    margin: 5em auto;
+    margin: 3em auto;
   }
   .shortcuts {
-    margin: 5em 0;
+    margin: 3em 0;
   }
 }
